Added: artId for alternate images when a faction have several units of the same type